third_party/rust/paste/tests/ui/case-warning.stderr
error: function `fooBar` should have a snake case name
  --> $DIR/case-warning.rs:6:20
   |
6  |             pub fn [<foo $i>]() {}
   |                    ^^^^^^^^^^ help: convert the identifier to snake case: `foo_bar`
...
11 | m!(Bar);
   | -------- in this macro invocation
   |
note: the lint level is defined here
  --> $DIR/case-warning.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(non_snake_case)]` implied by `#[deny(warnings)]`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
